fix issue with image being sized too small on smaller screens

--- a/src/Sections/HomeSection.module.scss
+++ b/src/Sections/HomeSection.module.scss
@@ -1,7 +1,10 @@
+@use "../variables" as v;
+
 .heroHeader {
     min-height: 100vh;
     padding-top: 5rem;
     text-align: center;
+    margin-inline: 20rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -19,7 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: min(calc(100% - 40vw), 25vmax);
+    width: min(400px, 25vw);
     border-radius: 50%;
     box-shadow: 0 0 0 15px #222, 0 0 5px 30px #555, 0 0 10px 45px #999;
     aspect-ratio: 1;
@@ -27,7 +30,7 @@
 }
 
 .profilePic {
-    max-width: 100%;
+    min-width: 100%;
 }
 
 .heroSubtitle {
